Fix footer link and clarify data sources

--- a/2026-02-02-hallucination-dashboard/index.html
+++ b/2026-02-02-hallucination-dashboard/index.html
@@ -425,7 +425,8 @@
         
         <footer>
             <p>Built with ❤️ inspired by trending AI discussions on X/Twitter</p>
-            <p>Data based on publicly reported benchmarks (Feb 2026) • <a href="https://github.com/sami/clawd-claw/tree/main/ai-trend-apps/2026-02-02-hallucination-dashboard">View Source</a></p>
+            <p>⚠️ Search model data from X/Twitter reports • Chat model data is illustrative</p>
+            <p><a href="https://github.com/samilamqaddam-lab/ai-trend-apps/tree/main/2026-02-02-hallucination-dashboard">View Source</a></p>
         </footer>
     </div>
     
