Use GitHub Pages URLs for app links

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <div class="app-header">
                     <div>
                         <h2 class="app-title">
-                            <a href="2026-02-02-hallucination-dashboard/index.html">🎭 AI Hallucination Dashboard</a>
+                            <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-02-hallucination-dashboard/index.html">🎭 AI Hallucination Dashboard</a>
                         </h2>
                     </div>
                     <span class="app-date">2026-02-02</span>
@@ -242,7 +242,7 @@
                     <span class="tag">Interactive</span>
                 </div>
                 <div class="app-links">
-                    <a href="2026-02-02-hallucination-dashboard/index.html">▶️ Launch App</a>
+                    <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-02-hallucination-dashboard/index.html">▶️ Launch App</a>
                     <a href="2026-02-02-hallucination-dashboard/README.md">📖 README</a>
                 </div>
             </article>
@@ -252,7 +252,7 @@
                 <div class="app-header">
                     <div>
                         <h2 class="app-title">
-                            <a href="2026-02-01-agent-society-sim/index.html">🦞 Agent Society Simulator</a>
+                            <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-01-agent-society-sim/index.html">🦞 Agent Society Simulator</a>
                         </h2>
                     </div>
                     <span class="app-date">2026-02-01</span>
@@ -267,7 +267,7 @@
                     <span class="tag">Moltbook</span>
                 </div>
                 <div class="app-links">
-                    <a href="2026-02-01-agent-society-sim/index.html">▶️ Launch App</a>
+                    <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-01-agent-society-sim/index.html">▶️ Launch App</a>
                     <a href="2026-02-01-agent-society-sim/README.md">📖 README</a>
                 </div>
             </article>
