Add Task Decomposer - inspired by UI-TARS desktop automation trend
- New app: visualizes how AI breaks down tasks into automation steps
- Inspired by ByteDance's UI-TARS (2.7k+ likes on Twitter)
- Features: NL input, step timeline, risk assessment, time estimates
- Updated index.html with new app card (now 4 apps total)

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <p class="subtitle">Daily micro-apps built from what's trending in AI</p>
             <div class="stats">
                 <div class="stat">
-                    <div class="stat-value" id="app-count">3</div>
+                    <div class="stat-value" id="app-count">4</div>
                     <div class="stat-label">Apps Built</div>
                 </div>
                 <div class="stat">
@@ -222,6 +222,31 @@
         </header>
         
         <main class="apps-grid">
+            <!-- App 4: Task Decomposer -->
+            <article class="app-card">
+                <div class="app-header">
+                    <div>
+                        <h2 class="app-title">
+                            <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-04-task-decomposer/index.html">🤖 Task Decomposer</a>
+                        </h2>
+                    </div>
+                    <span class="app-date">2026-02-04</span>
+                </div>
+                <p class="app-trend">"China just released a desktop automation agent that runs 100% locally. It can run any desktop app, open files, browse websites, and automate tasks without internet." — UI-TARS by ByteDance (2.7k+ likes)</p>
+                <p class="app-description">
+                    Visualize how AI agents break down your tasks into desktop automation steps. Enter any task in natural language and see the click-by-click execution plan with risk assessments and time estimates.
+                </p>
+                <div class="app-tags">
+                    <span class="tag">Desktop Automation</span>
+                    <span class="tag">UI-TARS</span>
+                    <span class="tag">Task Planning</span>
+                </div>
+                <div class="app-links">
+                    <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-04-task-decomposer/index.html">▶️ Launch App</a>
+                    <a href="2026-02-04-task-decomposer/README.md">📖 README</a>
+                </div>
+            </article>
+            
             <!-- App 3: Vibe Code Scanner -->
             <article class="app-card">
                 <div class="app-header">
