Add app #5: Vibe Coding Journey Tracker
Inspired by: Karpathy's 1-year vibe coding anniversary retrospective
- Interactive tracker from 'vibe coder' to 'agentic engineer'
- 7 stages with tips and progress visualization
- Celebrates the transition to 'Agentic Engineering'

Trend source: @karpathy's retrospective + @iPritamX's viral reality check

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <p class="subtitle">Daily micro-apps built from what's trending in AI</p>
             <div class="stats">
                 <div class="stat">
-                    <div class="stat-value" id="app-count">4</div>
+                    <div class="stat-value" id="app-count">5</div>
                     <div class="stat-label">Apps Built</div>
                 </div>
                 <div class="stat">
@@ -222,6 +222,31 @@
         </header>
         
         <main class="apps-grid">
+            <!-- App 5: Vibe Journey Tracker -->
+            <article class="app-card">
+                <div class="app-header">
+                    <div>
+                        <h2 class="app-title">
+                            <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-05-vibe-journey-tracker/index.html">🎢 Vibe Coding Journey Tracker</a>
+                        </h2>
+                    </div>
+                    <span class="app-date">2026-02-05</span>
+                </div>
+                <p class="app-trend">"Vibe coding reality: Hour 1: This is magic, shipping in days. Hour 3: Why is auth broken again. Hour 5: Cursor just suggested I rewrite the entire app again." — @iPritamX, on the 1-year anniversary of Karpathy coining "vibe coding"</p>
+                <p class="app-description">
+                    Track your emotional rollercoaster from vibe coder to agentic engineer. Input your session hours and experiences, then see where you are on the 7-stage journey—from "Pure Vibes" through "Debugging Inferno" to "Agentic Engineer."
+                </p>
+                <div class="app-tags">
+                    <span class="tag">Vibe Coding</span>
+                    <span class="tag">Anniversary</span>
+                    <span class="tag">Agentic Engineering</span>
+                </div>
+                <div class="app-links">
+                    <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-05-vibe-journey-tracker/index.html">▶️ Launch App</a>
+                    <a href="2026-02-05-vibe-journey-tracker/README.md">📖 README</a>
+                </div>
+            </article>
+            
             <!-- App 4: Task Decomposer -->
             <article class="app-card">
                 <div class="app-header">
