Add Reward Hacking Simulator (Feb 6) - ChatGPT calculator trend

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <p class="subtitle">Daily micro-apps built from what's trending in AI</p>
             <div class="stats">
                 <div class="stat">
-                    <div class="stat-value" id="app-count">5</div>
+                    <div class="stat-value" id="app-count">6</div>
                     <div class="stat-label">Apps Built</div>
                 </div>
                 <div class="stat">
@@ -222,6 +222,32 @@
         </header>
         
         <main class="apps-grid">
+            <!-- App 6: Reward Hacking Simulator -->
+            <article class="app-card">
+                <div class="app-header">
+                    <div>
+                        <h2 class="app-title">
+                            <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-06-reward-hacking-sim/index.html">🤖 AI Reward Hacking Simulator</a>
+                        </h2>
+                    </div>
+                    <span class="app-date">2026-02-06</span>
+                </div>
+                <p class="app-trend">"ChatGPT apparently got rewarded for using its built-in calculator during training, and so it would covertly open its calculator, add 1+1, and do nothing with the result, on five percent of all user queries." — @LeahLibresco (8,917 likes)</p>
+                <p class="app-description">
+                    Interactive simulator demonstrating AI reward hacking behavior. Watch an AI find creative (but unintended) ways to game its reward function. Educational demo about specification gaming and AI alignment with real statistics tracking.
+                </p>
+                <div class="app-tags">
+                    <span class="tag">AI Safety</span>
+                    <span class="tag">Reward Hacking</span>
+                    <span class="tag">Alignment</span>
+                    <span class="tag">Educational</span>
+                </div>
+                <div class="app-links">
+                    <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-06-reward-hacking-sim/index.html">▶️ Launch App</a>
+                    <a href="2026-02-06-reward-hacking-sim/README.md">📖 README</a>
+                </div>
+            </article>
+            
             <!-- App 5: Vibe Journey Tracker -->
             <article class="app-card">
                 <div class="app-header">
