Add Model Council Simulator - Feb 7, 2026
Inspired by Perplexity's Model Council launch:
- Run queries through Claude, GPT, Gemini simultaneously
- Animated typing responses for each model
- Consensus visualization (Agree/Partial/Diverge %)
- Synthesized answers with highlighted insights

Trend: Ensemble AI and multi-model querying going mainstream

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <p class="subtitle">Daily micro-apps built from what's trending in AI</p>
             <div class="stats">
                 <div class="stat">
-                    <div class="stat-value" id="app-count">6</div>
+                    <div class="stat-value" id="app-count">8</div>
                     <div class="stat-label">Apps Built</div>
                 </div>
                 <div class="stat">
@@ -222,6 +222,32 @@
         </header>
         
         <main class="apps-grid">
+            <!-- App 8: Model Council Simulator -->
+            <article class="app-card">
+                <div class="app-header">
+                    <div>
+                        <h2 class="app-title">
+                            <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-07-model-council-sim/index.html">⚖️ Model Council Simulator</a>
+                        </h2>
+                    </div>
+                    <span class="app-date">2026-02-07</span>
+                </div>
+                <p class="app-trend">"Model Council runs your query across multiple top models and shows where they agree (or don't). That's how you reduce AI risk." — @SidJ79</p>
+                <p class="app-description">
+                    Interactive demo of Perplexity's hot new Model Council feature. Query Claude, GPT, and Gemini simultaneously, watch them "think," and see a synthesized consensus with agreement percentages. Explore how ensemble AI reduces hallucinations.
+                </p>
+                <div class="app-tags">
+                    <span class="tag">Model Council</span>
+                    <span class="tag">Perplexity</span>
+                    <span class="tag">Ensemble AI</span>
+                    <span class="tag">Multi-Model</span>
+                </div>
+                <div class="app-links">
+                    <a href="https://samilamqaddam-lab.github.io/ai-trend-apps/2026-02-07-model-council-sim/index.html">▶️ Launch App</a>
+                    <a href="2026-02-07-model-council-sim/README.md">📖 README</a>
+                </div>
+            </article>
+            
             <!-- App 6: Reward Hacking Simulator -->
             <article class="app-card">
                 <div class="app-header">
